Define basics routes and controller functions for auth, user and recipes
