# routes/auth.go
@@ -12,5 +12,10 @@ func AuthRoutes(r *gin.Engine) {
 	{
 		authGroup.POST("/login", authController.Login)
 		authGroup.POST("/register", authController.Register)
+		authGroup.PUT("/verify", authController.VerifyAccount)
+		authGroup.POST("/forgot/password", authController.ForgotPassword)
+		authGroup.PUT("/reset/password", authController.ResetPassword)
+		authGroup.GET("/resend/verification", authController.ResendVerification)
+		authGroup.GET("/logout", authController.Logout)
 	}
 }
